--- a/apps/AdminComposite/Views/Theme/List.cshtml
+++ b/apps/AdminComposite/Views/Theme/List.cshtml
@@ -40,7 +40,7 @@
 		@Html.HiddenFor(m => m.SelectedTheme, new { id = "selected-theme" });
 									   
 		<fieldset>
-			<legend>Select a theme for your forum.</legend>
+			<legend>Details</legend>
 			<dl>
 				<dt><label for="theme-selector">Theme</label></dt>
 				<dd>
