--- a/apps/AdminComposite/Views/Badge/List.cshtml
+++ b/apps/AdminComposite/Views/Badge/List.cshtml
@@ -2,7 +2,7 @@
 @using ForumAgent.ReadModels
 @model IList<ForumBadge>
 @{
-	ViewBag.Title = "Custom Badges";
+	ViewBag.Title = "Manage Forum Badges";
 	((PaginationModel) ViewBag.Pagination).ColSpan = 4;
 }
 <script type="text/javascript">
@@ -56,7 +56,7 @@
 </script>
 <article>
 	<header>
-		<h2>Manage Forum Badges</h2>
+		<h2>@ViewBag.Title</h2>
 	</header>
 
 	<section>
@@ -106,7 +106,7 @@
 @section Breadcrumbs {
 	<ul id="breadcrumbs">
 		<li><a href="@Url.Action("Index", "Dashboard")" title="Back to Homepage">Home</a></li>
-		<li>@ViewBag.ForumName</li>
+		<li>@System.Globalization.CultureInfo.CurrentCulture.TextInfo.ToTitleCase(ViewBag.ForumName)</li>
 		<li>@ViewBag.Title</li>
 	</ul>
 }
