--- a/apps/AdminComposite/Views/Theme/List.cshtml
+++ b/apps/AdminComposite/Views/Theme/List.cshtml
@@ -1,6 +1,9 @@
 ﻿@using AdminComposite.Models
 @using Euclid.Composites.Mvc.Extensions
 @model ForumThemeInputModel
+@{
+	ViewBag.Title = "Manage Forum Themes";
+}
 <script type="text/javascript">
 	$(document).ready(function () {
 		$("#theme-selector").change(function () {
@@ -31,7 +34,7 @@
 </script>
 <article>
 	<header>
-		<h2>Manage Themes for Forum</h2>
+		<h2>@ViewBag.Title</h2>
 	</header>
 	<p></p>
 	@using (Html.BeginFormForInputModel(Model, true, Url.Action("List", "Theme"), "update-form"))
@@ -68,7 +71,7 @@
 @section Breadcrumbs{
 	<ul id="breadcrumbs">
 		<li>@Html.ActionLink("Home", "Index", "Dashboard")</li>
-		<li>@ViewBag.ForumName</li>
-		<li>Themes</li>
+		<li>@System.Globalization.CultureInfo.CurrentCulture.TextInfo.ToTitleCase(ViewBag.ForumName)</li>
+		<li>@ViewBag.Title</li>
 	</ul>
 }
