--- a/apps/AdminComposite/Views/UserProfile/List.cshtml
+++ b/apps/AdminComposite/Views/UserProfile/List.cshtml
@@ -147,7 +147,7 @@
 @section Breadcrumbs {
 	<ul id="breadcrumbs">
 		<li><a href="/" title="Back to Homepage">Home</a></li>
-		<li>@ViewBag.ForumName</li>
+		<li>@System.Globalization.CultureInfo.CurrentCulture.TextInfo.ToTitleCase(ViewBag.ForumName)</li>
 		<li>@ViewBag.Title</li>
 	</ul>
 }
