--- a/apps/AdminComposite/Views/Theme/List.cshtml
+++ b/apps/AdminComposite/Views/Theme/List.cshtml
@@ -43,7 +43,7 @@
 		@Html.HiddenFor(m => m.SelectedTheme, new { id = "selected-theme" });
 									   
 		<fieldset>
-			<legend>Details</legend>
+			<legend>Themes</legend>
 			<dl>
 				<dt><label for="theme-selector">Theme</label></dt>
 				<dd>
