--- a/apps/AdminComposite/Views/UserProfile/_Invite.cshtml
+++ b/apps/AdminComposite/Views/UserProfile/_Invite.cshtml
@@ -11,7 +11,7 @@
 	@Html.HiddenFor(m => m.ForumIdentifier);
 	@Html.HiddenFor(m=>m.Password)
 	<fieldset>
-		<legend>User</legend>
+		<legend>Invite User</legend>
 
 		<div class="input-container">
 			<label>First Name*</label>
