--- a/apps/AdminComposite/Views/Avatar/_NewAvatar.cshtml
+++ b/apps/AdminComposite/Views/Avatar/_NewAvatar.cshtml
@@ -8,7 +8,7 @@
 	{
 		@Html.HiddenFor(m=>m.ForumIdentifier)
 		<fieldset>
-			<legend>New Badge</legend>
+			<legend>New Avatar</legend>
 
 			<dl>
 				<dt><label for="avatar-name">Badge Name</label></dt>
