--- a/apps/AdminComposite/Views/Content/_NewContent.cshtml
+++ b/apps/AdminComposite/Views/Content/_NewContent.cshtml
@@ -42,7 +42,7 @@
 		@Html.HiddenFor(m => m.Value, new { id = "content-value" });
 
 		<fieldset>
-			<legend>New Content for Forum</legend>
+			<legend>New Content</legend>
 		
 			<dl>
 				<dt><label for="content-location">Location</label></dt>
