--- a/apps/AdminComposite/Views/Badge/_UpdateBadge.cshtml
+++ b/apps/AdminComposite/Views/Badge/_UpdateBadge.cshtml
@@ -7,7 +7,7 @@
 	{
 		@Html.HiddenFor(m=>m.BadgeIdentifier)
 		<fieldset>
-			<legend>New Badge</legend>
+			<legend>Update Badge</legend>
 
 			<dl>
 				<dt><label for="badge-name">Badge Name</label></dt>
