add image support to badge screens

--- a/apps/AdminComposite/Content/admin-styles.css
+++ b/apps/AdminComposite/Content/admin-styles.css
@@ -151,3 +151,12 @@ table .actions .admin-delete
 	margin-bottom: 20px;
 	margin-left: 10px;
 }
+
+.badge-preview
+{
+	height: 100px;
+	width: 100px;
+	margin-top: 10px;
+	margin-bottom: 20px;
+	margin-left: 10px;
+}
