--- a/apps/AdminComposite/Views/Badge/_NewBadge.cshtml
+++ b/apps/AdminComposite/Views/Badge/_NewBadge.cshtml
@@ -2,7 +2,6 @@
 @using Euclid.Composites.Mvc.Extensions
 @model CreateBadgeInputModel
 
-
 <section>
 	@using (Html.BeginFormForInputModel(Model))
 	{
@@ -25,6 +24,9 @@
 
 				<dt><label for="badge-description">Description</label></dt>
 				<dd>@Html.TextAreaFor(m=>m.Description, new { id = "badge-description"})</dd>
+
+				<dt><label for="badge-image">Image</label></dt>
+				<dd>@Html.TextBoxFor(m=>m.Image, new { id = "badge-image", type="file"})</dd>
 			</dl>
 		</fieldset>
 
