--- a/apps/AdminComposite/Views/Category/_UpdateCategory.cshtml
+++ b/apps/AdminComposite/Views/Category/_UpdateCategory.cshtml
@@ -7,7 +7,7 @@
 	{
 		@Html.HiddenFor(m => m.CategoryIdentifier);
 		<fieldset>
-			<legend>New Category</legend>
+			<legend>Update Category</legend>
 		
 			<dl>
 				<dt><label for="category-name">Name</label></dt>
