--- a/apps/AdminComposite/Views/Content/_UpdateContent.cshtml
+++ b/apps/AdminComposite/Views/Content/_UpdateContent.cshtml
@@ -41,7 +41,7 @@
 		@Html.HiddenFor(m => m.Value, new { id = "content-value" });
 
 		<fieldset>
-			<legend>Update Content for Forum</legend>
+			<legend>Update Content</legend>
 		
 			<dl>
 				<dt><label for="content-location">Location</label></dt>
