--- a/apps/AdminComposite/Views/Avatar/List.cshtml
+++ b/apps/AdminComposite/Views/Avatar/List.cshtml
@@ -3,7 +3,7 @@
 @model IList<ForumAvatar>
 
 @{
-	ViewBag.Title = "Add Avatar";
+	ViewBag.Title = "Manage Forum Avatars";
 	Layout = "~/Views/Shared/_Layout.cshtml";
 	((PaginationModel)ViewBag.Pagination).ColSpan = 4;
 	((PaginationModel) ViewBag.Pagination).WriteTFoot = false;
@@ -62,7 +62,7 @@
 
 <article>
 	<header>
-		<h2>Manage Forum Avatars</h2>
+		<h2>@ViewBag.Title</h2>
 	</header>
 
 	<section>
@@ -112,7 +112,7 @@
 @section Breadcrumbs {
 	<ul id="breadcrumbs">
 		<li><a href="@Url.Action("Index", "Dashboard")" title="Back to Homepage">Home</a></li>
-		<li>@ViewBag.ForumName</li>
+		<li>@System.Globalization.CultureInfo.CurrentCulture.TextInfo.ToTitleCase(ViewBag.ForumName)</li>
 		<li>@ViewBag.Title</li>
 	</ul>
 }
