--- a/apps/AdminComposite/Views/Shared/LeftRail/SitewideNavigation.cshtml
+++ b/apps/AdminComposite/Views/Shared/LeftRail/SitewideNavigation.cshtml
@@ -17,7 +17,7 @@
 			<li @Html.GetClassWhenControllerAndActionAreCurrent("organization", "details", "current")>
 				<a href="@Url.Action("Details", "Organization", new { organizationId = ViewBag.OrganizationId })">
 					Details</a> </li>
-			<li @Html.GetClassWhenControllerAndActionAreCurrent("organization", "listusers", "current")>
+			<li @Html.GetClassWhenControllerAndActionAreCurrent("organization", "users", "current")>
 				<a href="@Url.Action("Users", "Organization", new { organizationId = ViewBag.OrganizationId })">
 					Users</a> </li>
 		</ul>
@@ -56,20 +56,20 @@
 						<a href="@Url.Action("List", "Category", new { forumId })">Categories</a> </li>
 
 					<li @Html.GetClassWhenControllerAndActionAreCurrent(isCurrentForum, "userprofile", "list", "current")>
-					<a href="@Url.Action("List", "UserProfile", new { forumId })">Users</a> </li>
+						<a href="@Url.Action("List", "UserProfile", new { forumId })">Users</a> </li>
 				
 					<li @Html.GetClassWhenControllerAndActionAreCurrent(isCurrentForum, "badge", "list", "current")>
 						<a href="@Url.Action("List", "Badge", new { forumId })">Badges</a> </li>
+
+					<li @Html.GetClassWhenControllerAndActionAreCurrent(isCurrentForum, "avatar", "list", "current")>
+						<a href="@Url.Action("List", "Avatar", new {forumId })">Avatars</a>
+					</li>
 
 					<li @Html.GetClassWhenControllerAndActionAreCurrent(isCurrentForum, "voting", "list", "current")>
 						<a href="@Url.Action("List", "Voting", new { forumId })">Voting</a> </li>
 				
 					<li @Html.GetClassWhenControllerAndActionAreCurrent(isCurrentForum, "theme", "list", "current")>
 						<a href="@Url.Action("List", "Theme", new { forumId })">Themes</a> </li>
-
-					<li @Html.GetClassWhenControllerAndActionAreCurrent(isCurrentForum, "avatar", "list", "current")>
-						<a href="@Url.Action("List", "Avatar", new {forumId })">Avatars</a>
-					</li>
 
 					<li @if (moderatingPosts) { <text>class="current"</text>}>
 						<a href="@Url.Action("Items", "Moderation", new { forumId })">Moderate Posts & Comments</a> </li>
