--- a/apps/AdminComposite/Views/UserProfile/List.cshtml
+++ b/apps/AdminComposite/Views/UserProfile/List.cshtml
@@ -93,7 +93,7 @@
 
 		<section>
 			<p style="float:left">View, invite and block users to this forum</p>
-			<a href="#" style="float:right" class="button-link blue" id="invite-users">Invite Users</a>
+			<a href="#" style="float:right" class="button-link blue" id="invite-users">Invite User</a>
 		</section>
 		
 		<table>
