--- a/apps/AdminComposite/Views/Badge/_UpdateBadge.cshtml
+++ b/apps/AdminComposite/Views/Badge/_UpdateBadge.cshtml
@@ -9,6 +9,8 @@
 			$(this).hide();
 			$("#badge-image").show();
 			$("#reset-image").show();
+
+			$("#badge-image").click();
 		});
 
 		$("#reset-image").click(function () {
