--- a/apps/AdminComposite/Views/Content/List.cshtml
+++ b/apps/AdminComposite/Views/Content/List.cshtml
@@ -1,7 +1,12 @@
-﻿@using ForumAgent.ReadModels
-@model IList<ForumContent>
+﻿@using AdminComposite.Models
+@using ForumAgent.ReadModels
+@model AvailableContent
 @{
 	ViewBag.Title = "Manage Forum Content";
+	((PaginationModel)ViewBag.Pagination).ColSpan = 3;
+	((PaginationModel)ViewBag.Pagination).WriteTFoot = false;
+	((PaginationModel)ViewBag.Pagination).WriteTable = false;
+	((PaginationModel)ViewBag.Pagination).WriteTr = false;
 }
 <script type="text/javascript" src="@Url.Content("~/Content/jquery.timers-1.2.js")"></script>
 <script type="text/javascript">
@@ -94,15 +99,16 @@
 		</thead>
 		<tfoot>
 			<tr>
-				<td colspan="4">
+				<td>
 					<ul class="button-switch">
 						<li><button type="button" id="update">Save</button></li>
 					</ul>
 				</td>
+				@Html.Partial("_Pagination")
 			</tr>
 		</tfoot>
 		<tbody>
-			@foreach (var content in Model)
+			@foreach (var content in Model.ContentItems)
 			{
 				<tr>
 					<td>@Html.CheckBoxFor(m=>content.Active, new {@class="content-active", data_item_id=@content.Identifier})</td>
