--- a/apps/AdminComposite/Views/Content/List.cshtml
+++ b/apps/AdminComposite/Views/Content/List.cshtml
@@ -13,7 +13,7 @@
 	$(document).ready(function() {
 		$("#add-content").click(function() {
 			$("<div></div>")
-				.load("@Url.Action("NewContent", "Content", new { forumId = ViewContext.RouteData.Values["forumId"] })")
+				.load("@Url.Action("NewContent", "Content", new { forumId = Model.ForumIdentifier })")
 				.modal({
 						autoResize: true,
 						autoPosition: true,
@@ -129,7 +129,7 @@
 @section Breadcrumbs{
 	<ul id="breadcrumbs">
 		<li>@Html.ActionLink("Home", "Index", "Dashboard")</li>
-		<li>@System.Globalization.CultureInfo.CurrentCulture.TextInfo.ToTitleCase(ViewBag.ForumName)</li>
+		<li>@System.Globalization.CultureInfo.CurrentCulture.TextInfo.ToTitleCase(Model.ForumName)</li>
 		<li>@ViewBag.Title</li>
 	</ul>
 }
