clean up voting template and controller

--- a/apps/AdminComposite/Views/Voting/List.cshtml
+++ b/apps/AdminComposite/Views/Voting/List.cshtml
@@ -1,5 +1,4 @@
 ﻿@using AdminComposite.Models
-@using Euclid.Composites.Mvc.Extensions
 @model SetVotingSchemeInputModel
 @{
 	ViewBag.Title = "Manage Forum Voting";
@@ -7,7 +6,7 @@
 <script type="text/javascript">
 	$(document).ready(function () {
 		$("#save-voting-scheme").click(function () {
-			var forumId = "@Model.ForumIdentifierentifier";
+			var forumId = "@Model.ForumIdentifier";
 			var selectedScheme = $("input:radio[name='SelectedScheme']:checked").val();
 
 			$.get("@Url.Action("SetVotingScheme", "Voting")", { forumId: forumId, selectedScheme: selectedScheme });
@@ -61,7 +60,7 @@
 @section Breadcrumbs{
 	<ul id="breadcrumbs">
 		<li>@Html.ActionLink("Home", "Index", "Dashboard")</li>
-		<li>@System.Globalization.CultureInfo.CurrentCulture.TextInfo.ToTitleCase(ViewBag.FormName)</li>
+		<li>@System.Globalization.CultureInfo.CurrentCulture.TextInfo.ToTitleCase(Model.ForumName)</li>
 		<li>@ViewBag.Title</li>
 	</ul>
 }
